--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-venv
+*venv
 *.pyc
 migrations 
 vagrant/.vagrant
@@ -6,3 +6,4 @@ vagrant/site.retry
 vagrant/a4keypair.pem
 .idea/
 *.iml
+.DS_Store
