--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Set the environment type of the app (see config.py)
 export APP_SETTINGS=config.DevelopmentConfig
 # Set the DB url to a local database for development
-# export DATABASE_URL=postgresql://changwei:w45039w45039@localhost/my_app_db
-export DATABASE_URL=postgresql://localhost:4300/nextgame_db
+export DATABASE_URL=postgresql://changwei:w45039w45039@localhost/my_app_db
+# export DATABASE_URL=postgresql://localhost:4300/nextgame_db
